[package]
name = "seb"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tracing-subscriber = "0.3.18"
